Add reference to using multiple ini files in Inifile.htm.  Update FAQ with performance note.

--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -215,12 +215,20 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         a dvd player to the computer. Problems on other type of sources have yet 
         to be shown. 
       <p>So in common cases, you don't have to worry about this. 
-      <h2><br>
+      <h2>I have slower system and&nbsp; I get some dropped frames ?</h2>
+      <p>Some people experienced some dropped frames or extreme jerkiness on
+      slower machines, say less than 500 mhz. Some performance tuning parameters
+      for this are available in the [Threads] section of the <a href="IniFile.HTM">.ini documentation</a>.
+      Depending upon your graphics card you may also try running with a lower
+      screen resolution or color depth. Also try to limit what else is running
+      at the time, including System Tray applications that may cause frequent
+      interupts. </p>
+      <h2>
         Despite a very powerful system, I've still got some dropped frames ?</h2>
       <p>Some people experienced some dropped frames (signs of a machine that 
         has problems keeping up with the workload of dTV) even on powerful systems. 
         An hypothesis is that a motherboard agp speed issue might be the cause 
-        of such behavior. </p>
+        of such behavior.&nbsp; </p>
       <p> JackB reported <i>We looked at his BIOS settings and the only major 
         difference is that his had a 4X AGP mode and my MB only has a 2X AGP mode 
         <snip>We put my video card, a GeForce2 MX, in his (slower supposedly) 
@@ -254,7 +262,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Coding</h2>
       <p> Any help is welcome. Despite including very complex code, there's a 
         lot of features in it that are simple or that could be easily implemented 
-        without knowing anything about 3:2 pulldown detection. 
+        without knowing anything about 3:2 pulldown detection.
+      <p> dTV could especially use some more programmers interested in adding
+      advanced sound or closed captioning features.&nbsp;&nbsp; 
       <p> If you've got an idea, or feel like to trying to implement something 
         that is already in the <a href="Todo.htm">Todo list</a>, contact the 
         authors and join the <a href="http://sourceforge.net/mail/?group_id=7420">mailing 
