--- a/htdocs/IniFile.HTM
+++ b/htdocs/IniFile.HTM
@@ -45,6 +45,12 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Some advanced settings and functions in beta test will require changes 
         to this ini file to work properly.&nbsp; All the settings used by the 
         program are stored here and no changes are made to the registry.</p>
+      <p>While the default name of this file is dTV.ini, other names and copies
+      may be used, to create multiple profiles.&nbsp; Just create a shortcut to
+      invoke dTV with a single parameter such as &quot;dTV.exe vcr.ini&quot;.&nbsp;
+      This would cause the vcr.ini (or whatever) file to be used and saved on
+      exit.&nbsp; Doing this is easiest if you copy a working dTV.ini file first
+      and then change it using the dTV menus.</p>
       <p> 
       <table border="1">
         <tr> 
