--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -94,7 +94,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         Linux no<br>
         OS/2 definitely no ;-) 
       <h2>
-        When taking a snapshot, dTV outputs ppm files, what are those ?</h2>
+        When taking a snapshot, old versions of dTV output ppm files, what are those ?</h2>
       <p> It's called Portable PixMap. Actually, this is the only graphic file 
         code that John Adcock had when writing dTV ;-)<br>
         It's perfectly handled by several applications including 
@@ -103,7 +103,20 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         <li>Irfanview <a href="http://www.irfanview.com/english.htm">http://www.irfanview.com/english.htm</a> 
         <li>Paint Shop Pro <a href="http://www.jasc.com/product.asp?pf%5Fid=001">http://www.jasc.com/product.asp?pf%5Fid=001</a> 
       </ul>
-      <h2>&nbsp;</h2>
+      <h2>
+        My picture jumps up and down?<br>
+        I get dropped frames?</h2>
+      <p>
+        Both problems seems to be caused by not having a powerful enough machine
+        to run everything all at the same time.&nbsp; The things that use up a
+        lot of CPU time are 2-Frame and Blended Clip deinterlacing and automatic
+        pulldown detection.&nbsp; Try moving to another pulldown method or
+        switching off autodetection.&nbsp; The other alternative is to buy a
+        faster PC ;-))</p>
+      <p>
+        There is now a setting in Select Hardware which allows you to tell dTV
+        how fast your PC is.&nbsp; Try selecting alower speed if you get either
+        of these problems.</p>
       <h2>
         Can I <i>remote control</i> dTV ? <b>YES</b></h2>
       <p> Yes you can. dTV is being developed mainly by people using it as an 
