--- a/htdocs/readme/dTV_Readme108.htm
+++ b/htdocs/readme/dTV_Readme108.htm
@@ -23,9 +23,9 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="../images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="../images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="../images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
     <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
@@ -34,7 +34,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
       Readme &nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -58,7 +58,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;material where 3:2 pulldown 
         sequence changes<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Minor code cleanup<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="../Bugs_108.htm">Known 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="../bugs/Bugs_108.htm">Known 
         Bugs</a> for current list of known bugs and issues
       <h3>License</h3>
       <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
@@ -112,7 +112,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="../images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
