--- a/htdocs/readme/dTV_readme211.htm
+++ b/htdocs/readme/dTV_readme211.htm
@@ -1,7 +1,7 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>dTV -- Readme 1.3</title>
+<title>dTV -- Readme Version 1.9</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -30,8 +30,7 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   <tr> 
     <td width="160"><img src="../images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->dTV 
-      Readme &nbsp;<!-- #EndEditable --></b></font></td>
+      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->README&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="../images/yellowspacer.gif" width="100%" height="2"></td>
@@ -41,9 +40,44 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <h2>dTV - version 1.3</h2>
-      <h2><a HREF="http://deinterlace.sourceforge.net/">Original site</a></h2>
-      <P>What's new: Fix for flipping with bTV plug-ins</P>
+      <H1>dTV - version 2.1.1</H1>
+      <P>What's new:<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Preliminary judder fix<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new 2-Frame Deinterlacing algorithm<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Tom's new Greedy Deinterlacing algorithm
+      (this is low CPU, it is greedy because it eats one field)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Steve's new Temporal Noise Filter (to
+      switch on/off press n)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Better PAL 2:2 pulldown detection (It's
+      still not perfect though)<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pixel width selection for game console
+      support<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Window Position selection for use with
+      aspect ratio controls<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Snapshots now in TIFF format<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Should start correctly from a shortcut<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Many code optimizations for SSE and 3DNOW!
+      processors<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Adaptive deinterlace now
+      separate method<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Scaler bob deinterlacing method<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Extensive card and
+      audio recognition improvements from Mike<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Extensive reworking of parameters and
+      defaults.<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Audio
+      start/stop/save/restore on entry<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The ability to have multiple named .ini
+      files.<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Adv Video Flags now
+      saved and specified in ini file<br>
+      </font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <font SIZE="2">Deinterlace mode and
+      many other status items now kept in ini file.
+      </P>
+      </font>
+      <P>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      </P>
       <H2>License:</H2>
       <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
         General Public License</A> as published by the Free Software Foundation. 
@@ -56,34 +90,31 @@ ul {  font-family: Arial, Helvetica, sans-serif; font-size: 10pt}
         or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
         for more details</P>
       <H2>Requirements:</H2>
-      <P>I think it will run on Win 95/98 and NT. I have tested it on 98, Windows 
-        2000.</P>
-      <P>You will need a processor faster than about Pentium II 400MHz.</P>
-      <P>You will definitely need a PCI TV card with a BT848 BT849 BT878 BT879 
-        in it.</P>
-      <P>This software will not work with ATI All-in-Wonder or Matrox TV cards.</P>
+      <P>- I think it will run on Win 95/98 and NT. I have tested it on 98, Windows 
+        2000.<br>
+      - You will need a processor faster than about Pentium II 400MHz to use all
+      the features<br>
+      - You will definitely need a PCI TV card with a BT848 BT849 BT878 BT879 
+        in it.<br>
+      - This software will not work with ATI All-in-Wonder or Matrox TV cards.</P>
       <h1><font color="#FF0000">Warning</font></h1>
       <P><font color="#FF0000">This program installs a temporary driver while 
         it runs.&nbsp; This means that some of the code runs inside Ring0 along 
         with the kernel.&nbsp; What this means is that if anything goes wrong 
         this program can crash your whole system causing a BSOD in NT or a hanging 
-        95/98.&nbsp; I have had no problems running the exe stand alone but you 
-        may get problems.&nbsp; If using a debugger then it it is very important 
+        95/98.&nbsp; If using a debugger then it it is very important 
         that the program is allowed to shut down normally.&nbsp; If you use Stop 
         Debugging while running the program you system WILL crash.</font></P>
       <P><font color="#FF0000">As a precaution sync the disks before running this 
         program.&nbsp; Use the sync utility from <a href="http://www.sysinternals.com/">http://www.sysinternals.com/</a> 
         for whichever operating system you are running.</font></P>
-      <H2>What does it do?</H2>
-      <P>At the moment it allows you to trawl thought the available pull down 
-        modes manually using the space bar.&nbsp; So to use get a picture by playing 
-        around with the settings as above.&nbsp; Then put in a film and press 
-        the spacebar until the weave patterns disappear.</P>
-      <p>It is possible to specify a bTV plugin for the program to use.&nbsp; 
-        The default is bDeinterlace.dll with UseKey1 set to 1.</p>
-      <p><a href="../Thanks.htm">Thanks</a></p>
       <p><a href="../Authors.htm">Authors</a></p>
-      <p><a href="../32Spec.htm">Mark Rejhon's 3:2 Spec</a></p>
+      <p align="left"><a href="../Thanks.htm">Thanks</a></p>
+      <p align="left"><a href="../user_support.htm">Support</a></p>
+      <p><a href="../32spec.htm">Mark Rejhon's 3:2 Spec</a></p>
+      <p><a href="../IniFile.HTM">Ini File Settings</a></p>
+      <p><a href="../keyboard.htm"> Keyboard Shortcuts</a></p>
+      <p>&nbsp;</p>
       <H2>Enjoy!</H2>
       <!-- #EndEditable --></td>
   </tr>
